src/pandora/antlr/codegen/PandoraParser.py
# Generated from Pandora.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PandoraParser ( Parser ):

    grammarFileName = "Pandora.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'break'", "'if'", "'then'", "'elseif'", 
                     "'else'", "'end'", "'return'", "','", "'def'", "'='", 
                     "'('", "')'", "'['", "']'", "'.'", "':'", "'function'", 
                     "'=>'", "'{'", "'}'", "'or'", "'and'", "'<'", "'>'", 
                     "'<='", "'>='", "'~='", "'=='", "'..'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'&'", "'|'", "'~'", "'<<'", "'>>'", 
                     "'not'", "'#'", "'^'", "'true'", "'false'", "'nil'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NAME", "NORMALSTRING", 
                      "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", 
                      "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", "SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_ifstat = 3
    RULE_retstat = 4
    RULE_varlist = 5
    RULE_definition = 6
    RULE_assignment = 7
    RULE_namelist = 8
    RULE_explist = 9
    RULE_exp = 10
    RULE_prefixexp = 11
    RULE_functioncall = 12
    RULE_varOrExp = 13
    RULE_var = 14
    RULE_varSuffix = 15
    RULE_nameAndArgs = 16
    RULE_args = 17
    RULE_functiondef = 18
    RULE_parlist = 19
    RULE_tableconstructor = 20
    RULE_fieldlist = 21
    RULE_field = 22
    RULE_fieldsep = 23
    RULE_operatorOr = 24
    RULE_operatorAnd = 25
    RULE_operatorComparison = 26
    RULE_operatorStrcat = 27
    RULE_operatorAddSub = 28
    RULE_operatorMulDivMod = 29
    RULE_operatorBitwise = 30
    RULE_operatorUnary = 31
    RULE_operatorPower = 32
    RULE_number = 33
    RULE_string = 34
    RULE_boolean = 35
    RULE_nil = 36

    ruleNames =  [ "chunk", "block", "stat", "ifstat", "retstat", "varlist", 
                   "definition", "assignment", "namelist", "explist", "exp", 
                   "prefixexp", "functioncall", "varOrExp", "var", "varSuffix", 
                   "nameAndArgs", "args", "functiondef", "parlist", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", 
                   "operatorComparison", "operatorStrcat", "operatorAddSub", 
                   "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
                   "operatorPower", "number", "string", "boolean", "nil" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    NAME=47
    NORMALSTRING=48
    CHARSTRING=49
    LONGSTRING=50
    INT=51
    HEX=52
    FLOAT=53
    HEX_FLOAT=54
    COMMENT=55
    LINE_COMMENT=56
    WS=57
    SHEBANG=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ChunkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(PandoraParser.BlockContext,0)


        def EOF(self):
            return self.getToken(PandoraParser.EOF, 0)

        def getRuleIndex(self):
            return PandoraParser.RULE_chunk

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = PandoraParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.block()
            self.state = 75
            self.match(PandoraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.StatContext)
            else:
                return self.getTypedRuleContext(PandoraParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(PandoraParser.RetstatContext,0)


        def getRuleIndex(self):
            return PandoraParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PandoraParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PandoraParser.T__0) | (1 << PandoraParser.T__1) | (1 << PandoraParser.T__2) | (1 << PandoraParser.T__9) | (1 << PandoraParser.T__11) | (1 << PandoraParser.NAME))) != 0):
                self.state = 77
                self.stat()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PandoraParser.T__7:
                self.state = 83
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functioncall(self):
            return self.getTypedRuleContext(PandoraParser.FunctioncallContext,0)


        def ifstat(self):
            return self.getTypedRuleContext(PandoraParser.IfstatContext,0)


        def definition(self):
            return self.getTypedRuleContext(PandoraParser.DefinitionContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PandoraParser.AssignmentContext,0)


        def getRuleIndex(self):
            return PandoraParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PandoraParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(PandoraParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.functioncall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(PandoraParser.T__1)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.ifstat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.definition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.ExpContext)
            else:
                return self.getTypedRuleContext(PandoraParser.ExpContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.BlockContext)
            else:
                return self.getTypedRuleContext(PandoraParser.BlockContext,i)


        def getRuleIndex(self):
            return PandoraParser.RULE_ifstat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstat" ):
                return visitor.visitIfstat(self)
            else:
                return visitor.visitChildren(self)




    def ifstat(self):

        localctx = PandoraParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(PandoraParser.T__2)
            self.state = 95
            self.exp(0)
            self.state = 96
            self.match(PandoraParser.T__3)
            self.state = 97
            self.block()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PandoraParser.T__4:
                self.state = 98
                self.match(PandoraParser.T__4)
                self.state = 99
                self.exp(0)
                self.state = 100
                self.match(PandoraParser.T__3)
                self.state = 101
                self.block()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PandoraParser.T__5:
                self.state = 108
                self.match(PandoraParser.T__5)
                self.state = 109
                self.block()


            self.state = 112
            self.match(PandoraParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(PandoraParser.ExplistContext,0)


        def getRuleIndex(self):
            return PandoraParser.RULE_retstat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetstat" ):
                return visitor.visitRetstat(self)
            else:
                return visitor.visitChildren(self)




    def retstat(self):

        localctx = PandoraParser.RetstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_retstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(PandoraParser.T__7)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PandoraParser.T__11) | (1 << PandoraParser.T__17) | (1 << PandoraParser.T__19) | (1 << PandoraParser.T__31) | (1 << PandoraParser.T__37) | (1 << PandoraParser.T__40) | (1 << PandoraParser.T__41) | (1 << PandoraParser.T__43) | (1 << PandoraParser.T__44) | (1 << PandoraParser.T__45) | (1 << PandoraParser.NAME) | (1 << PandoraParser.NORMALSTRING) | (1 << PandoraParser.CHARSTRING) | (1 << PandoraParser.LONGSTRING) | (1 << PandoraParser.INT) | (1 << PandoraParser.HEX) | (1 << PandoraParser.FLOAT) | (1 << PandoraParser.HEX_FLOAT))) != 0):
                self.state = 115
                self.explist()


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PandoraParser.T__0:
                self.state = 118
                self.match(PandoraParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.VarContext)
            else:
                return self.getTypedRuleContext(PandoraParser.VarContext,i)


        def getRuleIndex(self):
            return PandoraParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = PandoraParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.var()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PandoraParser.T__8:
                self.state = 122
                self.match(PandoraParser.T__8)
                self.state = 123
                self.var()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namelist(self):
            return self.getTypedRuleContext(PandoraParser.NamelistContext,0)


        def explist(self):
            return self.getTypedRuleContext(PandoraParser.ExplistContext,0)


        def getRuleIndex(self):
            return PandoraParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = PandoraParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PandoraParser.T__9)
            self.state = 130
            self.namelist()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PandoraParser.T__10:
                self.state = 131
                self.match(PandoraParser.T__10)
                self.state = 132
                self.explist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namelist(self):
            return self.getTypedRuleContext(PandoraParser.NamelistContext,0)


        def explist(self):
            return self.getTypedRuleContext(PandoraParser.ExplistContext,0)


        def getRuleIndex(self):
            return PandoraParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PandoraParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.namelist()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PandoraParser.T__10:
                self.state = 136
                self.match(PandoraParser.T__10)
                self.state = 137
                self.explist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PandoraParser.NAME)
            else:
                return self.getToken(PandoraParser.NAME, i)

        def getRuleIndex(self):
            return PandoraParser.RULE_namelist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamelist" ):
                return visitor.visitNamelist(self)
            else:
                return visitor.visitChildren(self)




    def namelist(self):

        localctx = PandoraParser.NamelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_namelist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(PandoraParser.NAME)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PandoraParser.T__8:
                self.state = 141
                self.match(PandoraParser.T__8)
                self.state = 142
                self.match(PandoraParser.NAME)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExplistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.ExpContext)
            else:
                return self.getTypedRuleContext(PandoraParser.ExpContext,i)


        def getRuleIndex(self):
            return PandoraParser.RULE_explist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplist" ):
                return visitor.visitExplist(self)
            else:
                return visitor.visitChildren(self)




    def explist(self):

        localctx = PandoraParser.ExplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_explist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.exp(0)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PandoraParser.T__8:
                self.state = 149
                self.match(PandoraParser.T__8)
                self.state = 150
                self.exp(0)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nil(self):
            return self.getTypedRuleContext(PandoraParser.NilContext,0)


        def boolean(self):
            return self.getTypedRuleContext(PandoraParser.BooleanContext,0)


        def number(self):
            return self.getTypedRuleContext(PandoraParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(PandoraParser.StringContext,0)


        def functiondef(self):
            return self.getTypedRuleContext(PandoraParser.FunctiondefContext,0)


        def prefixexp(self):
            return self.getTypedRuleContext(PandoraParser.PrefixexpContext,0)


        def tableconstructor(self):
            return self.getTypedRuleContext(PandoraParser.TableconstructorContext,0)


        def operatorUnary(self):
            return self.getTypedRuleContext(PandoraParser.OperatorUnaryContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.ExpContext)
            else:
                return self.getTypedRuleContext(PandoraParser.ExpContext,i)


        def operatorPower(self):
            return self.getTypedRuleContext(PandoraParser.OperatorPowerContext,0)


        def operatorMulDivMod(self):
            return self.getTypedRuleContext(PandoraParser.OperatorMulDivModContext,0)


        def operatorAddSub(self):
            return self.getTypedRuleContext(PandoraParser.OperatorAddSubContext,0)


        def operatorStrcat(self):
            return self.getTypedRuleContext(PandoraParser.OperatorStrcatContext,0)


        def operatorComparison(self):
            return self.getTypedRuleContext(PandoraParser.OperatorComparisonContext,0)


        def operatorAnd(self):
            return self.getTypedRuleContext(PandoraParser.OperatorAndContext,0)


        def operatorOr(self):
            return self.getTypedRuleContext(PandoraParser.OperatorOrContext,0)


        def operatorBitwise(self):
            return self.getTypedRuleContext(PandoraParser.OperatorBitwiseContext,0)


        def getRuleIndex(self):
            return PandoraParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PandoraParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 157
                self.nil()
                pass

            elif la_ == 2:
                self.state = 158
                self.boolean()
                pass

            elif la_ == 3:
                self.state = 159
                self.number()
                pass

            elif la_ == 4:
                self.state = 160
                self.string()
                pass

            elif la_ == 5:
                self.state = 161
                self.functiondef()
                pass

            elif la_ == 6:
                self.state = 162
                self.prefixexp()
                pass

            elif la_ == 7:
                self.state = 163
                self.tableconstructor()
                pass

            elif la_ == 8:
                self.state = 164
                self.operatorUnary()
                self.state = 165
                self.exp(8)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 203
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 201
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 169
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 170
                        self.operatorPower()
                        self.state = 171
                        self.exp(9)
                        pass

                    elif la_ == 2:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 173
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 174
                        self.operatorMulDivMod()
                        self.state = 175
                        self.exp(8)
                        pass

                    elif la_ == 3:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 177
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 178
                        self.operatorAddSub()
                        self.state = 179
                        self.exp(7)
                        pass

                    elif la_ == 4:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 181
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 182
                        self.operatorStrcat()
                        self.state = 183
                        self.exp(5)
                        pass

                    elif la_ == 5:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 185
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 186
                        self.operatorComparison()
                        self.state = 187
                        self.exp(5)
                        pass

                    elif la_ == 6:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 189
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 190
                        self.operatorAnd()
                        self.state = 191
                        self.exp(4)
                        pass

                    elif la_ == 7:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 193
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 194
                        self.operatorOr()
                        self.state = 195
                        self.exp(3)
                        pass

                    elif la_ == 8:
                        localctx = PandoraParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 197
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 198
                        self.operatorBitwise()
                        self.state = 199
                        self.exp(2)
                        pass

             
                self.state = 205
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PrefixexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varOrExp(self):
            return self.getTypedRuleContext(PandoraParser.VarOrExpContext,0)


        def nameAndArgs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PandoraParser.NameAndArgsContext)
            else:
                return self.getTypedRuleContext(PandoraParser.NameAndArgsContext,i)

